base/examples/server/app_ingress/prod/ci-test/stdout.golden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleappprod
  namespace: sampleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/env: prod
      app.kubernetes.io/instance: sampleapp-prod
      app.kubernetes.io/name: sampleapp
      cluster.x-k8s.io/cluster-name: demo-cluster-name
  template:
    metadata:
      labels:
        app.kubernetes.io/env: prod
        app.kubernetes.io/instance: sampleapp-prod
        app.kubernetes.io/name: sampleapp
        cluster.x-k8s.io/cluster-name: demo-cluster-name
    spec:
      containers:
        - env:
            - name: APP_NAME
              value: sampleapp
            - name: ENVIRONMENT
              value: prod
            - name: INSTANCE
              value: sampleapp-prod
            - name: CLUSTER
              value: demo-cluster-name
          image: gcr.io/google-samples/gb-frontend:v4
          name: main
          resources:
            limits:
              cpu: 100m
              ephemeral-storage: 1Gi
              memory: 100Mi
            requests:
              cpu: 100m
              ephemeral-storage: 1Gi
              memory: 100Mi
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Namespace
metadata:
  name: sampleapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleappprod0
  namespace: sampleapp
spec:
  rules:
    - host: guestbook.kusionexamples.com
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: ""
            pathType: Prefix
